Removed commands folder and modified Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
-versoin: "3"
+versoin: "3.7"
 
 services:
-  web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
-  postgresql:
-
-
-volumes:
-  media:
-
-  static:
-
-  database:
+  app:
+    build:
+      context: .
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./app:/app
+    command: sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DEBUG=1
